# 1st_year_project

./: README.md
Final ShBanginzzz/: Dockerfile  Makefile  docker-compose.yaml
Final ShBanginzzz/driveetic/: db.sqlite3  manage.py  pyproject.toml
Final ShBanginzzz/driveetic/accounts/: forms.py  models.py  urls.py  views.py
Final ShBanginzzz/driveetic/accounts/migrations/: 0001_initial.py
Final ShBanginzzz/driveetic/accounts/templates/auth/: login.html  signup.html
Final ShBanginzzz/driveetic/driveetic/: asgi.py  settings.py  urls.py  wsgi.py
Final ShBanginzzz/driveetic/static/: style.css
Final ShBanginzzz/driveetic/templates/: base.html
Final ShBanginzzz/driveetic/updownfunks/: apps.py  forms.py  models.py  urls.py  views.py
Final ShBanginzzz/driveetic/updownfunks/migrations/: 0001_initial.py  0002_file_folder.py  0003_remove_folder_files_alter_file_folder.py
Final ShBanginzzz/driveetic/updownfunks/templates/: cdashboard.html  create_folder.html  folder_detail.html  move_file.html  upload_folder.html
Final ShBanginzzz/driveetic/updownfunks/templates/updownfunks/: index.html
